--- a/configs/clip/mini-imagenet/test.yaml
+++ b/configs/clip/mini-imagenet/test.yaml
@@ -3,10 +3,10 @@ test_set_args:
   split: meta-test
   # size: 84
   size: 224                 # add for clip
-  transform: null
+  transform: clip
   n_batch: 150
   n_episode: 4
-  n_way: 5
+  n_way: 15
   n_shot: 1
   n_query: 10
 
@@ -53,9 +53,15 @@ test_set_args:
 
 ### task_sample
 # path: ./save/task_samples/task5000/meta-mini-imagenet_ViT-B32_fs-centroid_5y25s_1000size
-path: ./save/task_samples/make_up_paper/meta-mini-imagenet_ViT-B32_fs-centroid_5y1s_50m_800M
-ckpt: max-va.pth
+# path: ./save/task_samples/make_up_paper/meta-mini-imagenet_ViT-B32_fs-centroid_5y1s_50m_800M
+
+# ckpt: max-va.pth
 # ckpt: epoch-last.pth
+
+encoder: ViT-B32
+# path: ./save/mini-imagenet/original
+path: ./save/mini-imagenet/Mm_trend/meta-mini-imagenet_ViT-B32_fs-centroid_15y1s_120m_200M
+ckpt: max-va.pth
 
 classifier: fs-centroid
 classifier_args:
