--- a/configs/VL/mini-imagenet.yaml
+++ b/configs/VL/mini-imagenet.yaml
@@ -6,8 +6,8 @@ train_set_args:
   transform: clip
   n_batch: 200
   n_episode: 1
-  n_way: 10
-  n_query: 10
+  n_way: 15
+  n_query: 15
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 val_set_args:
   root: /srv/home/zxu444/datasets/mini-imagenet
@@ -17,7 +17,7 @@ val_set_args:
   n_batch: 200
   n_episode: 1
   n_way: 15
-  n_query: 10
+  n_query: 15
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 test_set_args:
   root: /srv/home/zxu444/datasets/mini-imagenet
@@ -34,9 +34,9 @@ test_set_args:
 encoder: ViT-B32
 
 ### only for test
-# path: ./save/VL/mini-imagenet/vl-meta-mini-imagenet_ViT-B32_fs-centroid_10y_200M
-# ckpt_name: vl-meta-mini-imagenet_ViT-B32_fs-centroid_10y_200M
-# ckpt: max-va.pth
+path: ./save/VL/mini-imagenet/vl-meta-mini-imagenet_ViT-B32_fs-centroid_15y_200M
+ckpt_name: vl-meta-mini-imagenet_ViT-B32_fs-centroid_15y_200M
+ckpt: max-va.pth
 # ckpt: epoch-last.pth
 ###
 classifier: fs-centroid
