--- a/configs/VL/tiered-imagenet.yaml
+++ b/configs/VL/tiered-imagenet.yaml
@@ -6,37 +6,41 @@ train_set_args:
   transform: clip
   n_batch: 200
   n_episode: 1
-  n_way: 15
-  n_query: 10
-  deterministic: True  # whether set images in dataset to be deterministic in each epoch
+  n_way: 100
+  n_query: 15
+  # deterministic: True  # whether set images in dataset to be deterministic in each epoch
 val_set_args:
   root: /srv/home/zxu444/datasets/tiered-imagenet/tiered_imagenet
   split: meta-val
   size: 224          
   transform: null
-  n_batch: 200
+  n_batch: 10
   n_episode: 1
-  n_way: 15
-  n_query: 10
-  deterministic: True  # whether set images in dataset to be deterministic in each epoch
+  n_way: 97
+  n_query: 2
+  # deterministic: True  # whether set images in dataset to be deterministic in each epoch
 test_set_args:
   root: /srv/home/zxu444/datasets/tiered-imagenet/tiered_imagenet
   split: meta-test
   size: 224                 # add for clip
   transform: null
   n_batch: 150
-  n_episode: 4
-  n_way: 15
-  n_query: 15
+  n_episode: 1
+  n_way: 100
+  n_query: 2
   # deterministic: True
 
-
+### only for test
+# path: ./save/VL/tiered-imagenet/vl-meta-tiered-imagenet_ViT-B32_fs-centroid_15y_200M
+# ckpt_name: vl-meta-tiered-imagenet_ViT-B32_fs-centroid_15y_200M
+# ckpt: max-va.pth
 encoder: ViT-B32
 
-### only for test
-# path: ./save/VL/tiered-imagenet/vl-meta-tiered-imagenet_ViT-B32_fs-centroid_10y_200M
-# ckpt: max-va.pth
+### load model
+# path: ./save/VL/tiered-imagenet/vl-meta-tiered-imagenet_ViT-B32_fs-centroid_100y_200M
+# # ckpt: max-va.pth
 # ckpt: epoch-last.pth
+
 ###
 classifier: fs-centroid
 classifier_args:
@@ -50,5 +54,6 @@ optimizer_args:
 
 save_path: ./save/VL/tiered-imagenet
 
-save_epoch: 5
-n_epochs: 10
+save_epoch: 10
+n_epochs: 200
+# start_epoch_from: 100
