--- a/configs/VL/tiered-imagenet.yaml
+++ b/configs/VL/tiered-imagenet.yaml
@@ -6,9 +6,8 @@ train_set_args:
   transform: clip
   n_batch: 20
   n_episode: 1
-  n_way: 50
-  # n_query: 15
-  n_query: 1 # for ConLoss
+  n_way: 100
+  n_query: 15
   # deterministic: True  # whether set images in dataset to be deterministic in each epoch
 val_set_args:
   root: /srv/home/zxu444/datasets/tiered-imagenet/tiered_imagenet
@@ -17,9 +16,8 @@ val_set_args:
   transform: clip
   n_batch: 20
   n_episode: 1
-  n_way: 50
-  # n_query: 2
-  n_query: 1 # for ConLoss
+  n_way: 97
+  n_query: 2
   # deterministic: True  # whether set images in dataset to be deterministic in each epoch
 test_set_args:
   root: /srv/home/zxu444/datasets/tiered-imagenet/tiered_imagenet
@@ -28,15 +26,14 @@ test_set_args:
   transform: clip
   n_batch: 15
   n_episode: 1
-  n_way: 50
-  # n_query: 15
-  n_query: 1 # for ConLoss
+  n_way: 100
+  n_query: 15
   # deterministic: True
 
 ### only for test
-path: ./save/VL/tiered-imagenet/ConLoss/vl-meta-tiered-imagenet_ViT-B32_fs-centroid_50y_1q_20M_1e-07lr
-ckpt_name: vl-meta-tiered-imagenet_ViT-B32_fs-centroid_50y_1q_20M_1e-07lr
-ckpt: max-va.pth
+# path: ./save/VL/tiered-imagenet/vl-meta-tiered-imagenet_ViT-B32_fs-centroid_15y_200M
+# ckpt_name: vl-meta-tiered-imagenet_ViT-B32_fs-centroid_15y_200M
+# ckpt: max-va.pth
 encoder: ViT-B32
 
 ### load model
@@ -51,12 +48,12 @@ classifier_args:
 
 optimizer: sgd
 optimizer_args:
-  lr: 1.e-8 # 0.001
+  lr: 1.e-5 # 0.001
   momentum: 0.9
   weight_decay: 0 # 5.e-6
 
 save_path: ./save/VL/tiered-imagenet
 
-save_epoch: 1
-n_epochs: 30
+save_epoch: 10
+n_epochs: 10
 # start_epoch_from: 160
