--- a/configs/clip/domain-net/finetune_ViT.yaml
+++ b/configs/clip/domain-net/finetune_ViT.yaml
@@ -1,5 +1,6 @@
-dataset: meta-mini-imagenet
+dataset: meta-domain-net
 train_set_args: 
+  root: /srv/home/zxu444/datasets/domainNet/sketch_split
   split: meta-train
   size: 224           # added for ViT
   transform: clip
@@ -10,6 +11,7 @@ train_set_args:
   n_query: 9
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 val_set_args:
+  root: /srv/home/zxu444/datasets/domainNet/sketch_split
   split: meta-val
   size: 224           # added for ViT
   transform: clip
@@ -40,22 +42,9 @@ optimizer_args:
   momentum: 0.9
   weight_decay: 5.e-6
 
-########### limited number of images per class we get access to
-# save_path: ./save/meta_train_limited/limited10/clip # added for meta_train_limited
-
-########### limited class we get access to, multiple run
-# save_path: ./save/meta_limited_classes/class64/run3
-# seed: 2
-
-########### vary few shot images per task
-# save_path: ./save/few_shot_images/shot5/run3
-
-########### task, samples
-# save_path: ./save/task_samples/task5000
 
 ########### M,m trend
-save_path: ./save/mini-imagenet/vary_num_shot
-# save_path: ./save/mini-imagenet/original  # only for testing time
+save_path: ./save/clip/domain-net/Mm_trend
 
 
 save_epoch: 5
