--- a/configs/clip/mini-imagenet/test.yaml
+++ b/configs/clip/mini-imagenet/test.yaml
@@ -5,10 +5,10 @@ test_set_args:
   size: 224                 # add for clip
   transform: clip
   n_batch: 150
-  n_episode: 4
+  n_episode: 1
   n_way: 15
-  n_shot: 1
-  n_query: 10
+  n_shot: 5
+  n_query: 15
 
 ##  test pretrain CLIP ViT-B32 freeze + append train mlp head + meta NC as classifier
 # path: ./save/clip/meta-mini-imagenet_ViT-B32_fs-centroid_5y1s_train_wrapper_head_clip 
@@ -58,9 +58,12 @@ test_set_args:
 # ckpt: max-va.pth
 # ckpt: epoch-last.pth
 
-encoder: ViT-B32
+# encoder: ViT-B32
+encoder: RN50
 # path: ./save/mini-imagenet/original
-path: ./save/mini-imagenet/Mm_trend/meta-mini-imagenet_ViT-B32_fs-centroid_15y1s_120m_200M
+path: ./save/mini-imagenet/Mm_trend/meta-mini-imagenet_RN50_fs-centroid_15y1s_150m_200M
+
+
 ckpt: max-va.pth
 
 classifier: fs-centroid
