--- a/configs/dinov2/mini-imagenet/finetune.yaml
+++ b/configs/dinov2/mini-imagenet/finetune.yaml
@@ -1,8 +1,9 @@
-dataset: meta-tiered-imagenet
+dataset: meta-mini-imagenet
 train_set_args: 
   split: meta-train
   size: 224           # added for ViT
-  transform: clip
+  transform: dinov2
+  val_transform: dinov2
   n_batch: 200
   n_episode: 1
   n_way: 15
@@ -12,7 +13,8 @@ train_set_args:
 val_set_args:
   split: meta-val
   size: 224           # added for ViT
-  transform: clip
+  transform: make_classification_eval_transform
+  val_transform: make_classification_eval_transform
   n_batch: 200
   n_episode: 1
   n_way: 15
@@ -21,7 +23,7 @@ val_set_args:
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 
 
-encoder: ViT-B32
+encoder: dinov2_vitb14
 
 # path: ./save/task_samples/task5000/meta-mini-imagenet_ViT-B32_fs-centroid_5y25s_1000size
 # path: ./save/tiered-imagenet/Mm_trend/meta-tiered-imagenet_ViT-B32_fs-centroid_15y1s_150m_600M
@@ -35,27 +37,14 @@ classifier_args:
 
 optimizer: sgd
 optimizer_args:
-  lr: 1.e-5 # 0.001
+  lr: 1.e-6
   momentum: 0.9
-  weight_decay: 5.e-6
+  weight_decay: 0
 
-########### limited number of images per class we get access to
-# save_path: ./save/meta_train_limited/limited10/clip # added for meta_train_limited
-
-########### limited class we get access to, multiple run
-# save_path: ./save/meta_limited_classes/class64/run3
-# seed: 2
-
-########### vary few shot images per task
-# save_path: ./save/few_shot_images/shot5/run3
-
-########### task, samples
-# save_path: ./save/task_samples/task5000
 
 ########### M,m trend
-# save_path: ./save/tiered-imagenet/Mm_trend
+save_path: ./save/dinov2/mini-imagenet/Mm_trend
 
-save_path: ./save/mini-imagenet/vary_num_shot
 
 save_epoch: 5
 V: 1
