--- a/configs/dinov2/tiered-imagenet/test.yaml
+++ b/configs/dinov2/tiered-imagenet/test.yaml
@@ -1,8 +1,8 @@
 dataset: meta-tiered-imagenet
 test_set_args:
   split: meta-test
-  size: 224                 # add for clip
-  transform: clip
+  size: 224                 
+  transform: make_classification_eval_transform
   n_batch: 150
   n_episode: 1
   n_way: 15
@@ -10,9 +10,8 @@ test_set_args:
   n_query: 15
 
 
-# encoder: ViT-B32
-encoder: RN50
-path: ./save/tiered-imagenet/Mm_trend/meta-tiered-imagenet_RN50_fs-centroid_15y1s_150m_200M
+encoder: dinov2_vitb14
+path: ./save/dinov2/tiered-imagenet/Mm_trend/meta-tiered-imagenet_dinov2_vitb14_fs-centroid_15y1s_150m_200M
 # path: ./save/tiered-imagenet/original
 
 ckpt: max-va.pth
