--- a/configs/torchvision/domain-net/finetune_RN50.yaml
+++ b/configs/torchvision/domain-net/finetune_RN50.yaml
@@ -1,8 +1,9 @@
-dataset: meta-mini-imagenet
+dataset: meta-domain-net
 train_set_args: 
+  root: /srv/home/zxu444/datasets/domainNet/sketch_split
   split: meta-train
-  size: 224           # added for ViT
-  transform: clip
+  size: 224          
+  transform: dinov2
   n_batch: 200
   n_episode: 1
   n_way: 15
@@ -10,9 +11,10 @@ train_set_args:
   n_query: 9
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 val_set_args:
+  root: /srv/home/zxu444/datasets/domainNet/sketch_split
   split: meta-val
-  size: 224           # added for ViT
-  transform: clip
+  size: 224           
+  transform: make_classification_eval_transform
   n_batch: 200
   n_episode: 1
   n_way: 15
@@ -21,7 +23,7 @@ val_set_args:
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 
 
-encoder: clip_ViT-B32
+encoder: torchvision_RN50
 
 # path: ./save/task_samples/task5000/meta-mini-imagenet_ViT-B32_fs-centroid_5y25s_1000size
 # path: ./save/clip/meta-mini-imagenet_RN50_fs-centroid_5y1s_finetune_clip
@@ -36,26 +38,13 @@ classifier_args:
 
 optimizer: sgd
 optimizer_args:
-  lr: 1.e-5 # 0.001
-  momentum: 0.9
-  weight_decay: 5.e-6
+  lr: 2.e-8 # 0.001
+  momentum: 0.99
+  weight_decay: 0 # 5.e-4
 
-########### limited number of images per class we get access to
-# save_path: ./save/meta_train_limited/limited10/clip # added for meta_train_limited
-
-########### limited class we get access to, multiple run
-# save_path: ./save/meta_limited_classes/class64/run3
-# seed: 2
-
-########### vary few shot images per task
-# save_path: ./save/few_shot_images/shot5/run3
-
-########### task, samples
-# save_path: ./save/task_samples/task5000
 
 ########### M,m trend
-save_path: ./save/mini-imagenet/Mm_trend
-# save_path: ./save/mini-imagenet/original  # only for testing time
+save_path: ./save/torchvision/domain-net/Mm_trend
 
 
 save_epoch: 5
