--- a/configs/clip/mini-imagenet/finetune_ViT_lp.yaml
+++ b/configs/clip/mini-imagenet/finetune_ViT_lp.yaml
@@ -23,6 +23,8 @@ val_set_args:
 
 encoder: clip_ViT-B32
 
+stdFT: True
+
 # path: ./save/task_samples/task5000/meta-mini-imagenet_ViT-B32_fs-centroid_5y25s_1000size
 # path: ./save/clip/meta-mini-imagenet_RN50_fs-centroid_5y1s_finetune_clip
 # path: ./save/mini-imagenet/Mm_trend/meta-mini-imagenet_ViT-B32_fs-centroid_15y4s_600m_800M
@@ -36,29 +38,15 @@ classifier_args:
 
 optimizer: sgd
 optimizer_args:
-  lr: 1.e-5 # 0.001
+  lr: 0.01
   momentum: 0.9
   weight_decay: 5.e-6
 
-########### limited number of images per class we get access to
-# save_path: ./save/meta_train_limited/limited10/clip # added for meta_train_limited
-
-########### limited class we get access to, multiple run
-# save_path: ./save/meta_limited_classes/class64/run3
-# seed: 2
-
-########### vary few shot images per task
-# save_path: ./save/few_shot_images/shot5/run3
-
-########### task, samples
-# save_path: ./save/task_samples/task5000
-
 ########### M,m trend
-save_path: ./save/mini-imagenet/Mm_trend
-# save_path: ./save/mini-imagenet/original  # only for testing time
+save_path: ./save/clip/mini-imagenet/stdFT
 
 
 save_epoch: 5
 V: 1
-n_epochs: 10
+n_epochs: 30
 
