--- a/configs/clip/tiered-imagenet/finetune_ViT_lp.yaml
+++ b/configs/clip/tiered-imagenet/finetune_ViT_lp.yaml
@@ -1,4 +1,4 @@
-dataset: meta-mini-imagenet
+dataset: meta-tiered-imagenet
 train_set_args: 
   split: meta-train
   size: 224           # added for ViT
@@ -22,11 +22,12 @@ val_set_args:
 
 
 encoder: clip_ViT-B32
+stdFT: True
+
 
 # path: ./save/task_samples/task5000/meta-mini-imagenet_ViT-B32_fs-centroid_5y25s_1000size
-# path: ./save/clip/meta-mini-imagenet_RN50_fs-centroid_5y1s_finetune_clip
-# path: ./save/mini-imagenet/Mm_trend/meta-mini-imagenet_ViT-B32_fs-centroid_15y4s_600m_800M
-# ckpt: epoch-10.pth
+# path: ./save/tiered-imagenet/Mm_trend/meta-tiered-imagenet_ViT-B32_fs-centroid_15y1s_150m_600M
+# ckpt: epoch-last.pth
 # start_epoch_from: 10
 
 classifier: fs-centroid
@@ -36,27 +37,13 @@ classifier_args:
 
 optimizer: sgd
 optimizer_args:
-  lr: 1.e-5 # 0.001
+  lr: 0.01
   momentum: 0.9
   weight_decay: 5.e-6
 
-########### limited number of images per class we get access to
-# save_path: ./save/meta_train_limited/limited10/clip # added for meta_train_limited
 
-########### limited class we get access to, multiple run
-# save_path: ./save/meta_limited_classes/class64/run3
-# seed: 2
 
-########### vary few shot images per task
-# save_path: ./save/few_shot_images/shot5/run3
-
-########### task, samples
-# save_path: ./save/task_samples/task5000
-
-########### M,m trend
-save_path: ./save/mini-imagenet/Mm_trend
-# save_path: ./save/mini-imagenet/original  # only for testing time
-
+save_path: ./save/clip/tiered-imagenet/stdFT
 
 save_epoch: 5
 V: 1
