--- a/configs/torchvision/mini-imagenet/finetune_ViT.yaml
+++ b/configs/torchvision/mini-imagenet/finetune_ViT.yaml
@@ -1,8 +1,9 @@
 dataset: meta-mini-imagenet
 train_set_args: 
   split: meta-train
-  size: 224           # added for ViT
-  transform: clip
+  size: 224           
+  transform: dinov2
+  val_transform: dinov2
   n_batch: 200
   n_episode: 1
   n_way: 15
@@ -11,8 +12,9 @@ train_set_args:
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 val_set_args:
   split: meta-val
-  size: 224           # added for ViT
-  transform: clip
+  size: 224           
+  transform: make_classification_eval_transform
+  val_transform: make_classification_eval_transform
   n_batch: 200
   n_episode: 1
   n_way: 15
@@ -21,7 +23,7 @@ val_set_args:
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 
 
-encoder: clip_ViT-B32
+encoder: torchvision_vit_b_32
 
 # path: ./save/task_samples/task5000/meta-mini-imagenet_ViT-B32_fs-centroid_5y25s_1000size
 # path: ./save/clip/meta-mini-imagenet_RN50_fs-centroid_5y1s_finetune_clip
@@ -54,8 +56,8 @@ optimizer_args:
 # save_path: ./save/task_samples/task5000
 
 ########### M,m trend
-save_path: ./save/mini-imagenet/Mm_trend
-# save_path: ./save/mini-imagenet/original  # only for testing time
+save_path: ./save/torchvision/mini-imagenet/Mm_trend
+
 
 
 save_epoch: 5
