--- a/configs/clip/domain-net/finetune_RN50_lp.yaml
+++ b/configs/clip/domain-net/finetune_RN50_lp.yaml
@@ -24,32 +24,38 @@ val_set_args:
 
 
 encoder: clip_RN50
-stdFT: True
+LP: False
 
+path: ./save/clip/domain-net/stdFT/meta-domain-net_clip_RN50_lp_logistic_15y1s_150m_200M
+ckpt: lp_epoch-30.pth
+LP_FT: True
 
-# path: ./save/task_samples/task5000/meta-mini-imagenet_ViT-B32_fs-centroid_5y25s_1000size
-# path: ./save/clip/meta-mini-imagenet_RN50_fs-centroid_5y1s_finetune_clip
-# path: ./save/mini-imagenet/Mm_trend/meta-mini-imagenet_ViT-B32_fs-centroid_15y4s_600m_800M
-# ckpt: epoch-10.pth
-# start_epoch_from: 10
 
 classifier: fs-centroid
 classifier_args:
   temp: 10.
   learn_temp: True
 
+lp_optimizer: sgd
+lp_optimizer_args:
+  lr: 1.
+  schedule: step
+  decay_rate: 0.1
+  decay_epochs:
+    - 60
+    - 80
+  momentum: 0.9
+  weight_decay: 0
+lp_n_epochs: 30
+
 optimizer: sgd
 optimizer_args:
-  lr: 1.e-4 # 0.001
-  momentum: 0.99
-  weight_decay: 0 # 5.e-4
-
-
-########### M,m trend
-save_path: ./save/clip/domain-net/stdFT
-
-
-save_epoch: 5
-V: 1
+  lr: 1.e-7 # 0.001
+  momentum: 0.9
+  weight_decay: 5.e-6
 n_epochs: 10
 
+save_path: ./save/clip/domain-net/stdFT
+
+save_epoch: 10
+V: 1
