--- a/configs/clip/domain-net/test.yaml
+++ b/configs/clip/domain-net/test.yaml
@@ -11,10 +11,12 @@ test_set_args:
   n_query: 15
 
 
-# encoder: ViT-B32
-encoder: RN50
+# encoder: clip_ViT-B32
+encoder: clip_RN50
 # path: ./save/clip/domain-net/Mm_trend/meta-domain-net_ViT-B32_fs-centroid_15y1s_150m_200M
-path: ./save/clip/domain-net/Mm_trend/meta-domain-net_RN50_fs-centroid_15y1s_150m_200M
+# path: ./save/clip/domain-net/Mm_trend/meta-domain-net_RN50_fs-centroid_15y1s_150m_200M
+# path: ./save/clip/domain-net/stdFT/meta-domain-net_clip_ViT-B32_lp_logistic_15y1s_150m_200M
+path: ./save/clip/domain-net/stdFT/meta-domain-net_clip_RN50_lp_logistic_15y1s_150m_200M
 
 # path: ./save/tiered-imagenet/original
 
