--- a/configs/clip/mini-imagenet/finetune_RN50_lp.yaml
+++ b/configs/clip/mini-imagenet/finetune_RN50_lp.yaml
@@ -21,24 +21,38 @@ val_set_args:
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 
 encoder: clip_RN50
-stdFT: True
+LP: False
 
-# path: ./save/clip/meta-mini-imagenet_RN50_fs-centroid_5y1s_finetune_clip_old
-# ckpt: max-va.pth
+path: ./save/clip/mini-imagenet/stdFT/meta-mini-imagenet_clip_RN50_lp_logistic_15y1s_150m_200M
+ckpt: lp_epoch-10.pth
+LP_FT: True
+
 
 classifier: fs-centroid
 classifier_args:
   temp: 10.
   learn_temp: True
 
+lp_optimizer: sgd
+lp_optimizer_args:
+  lr: 1.
+  schedule: step
+  decay_rate: 0.1
+  decay_epochs:
+    - 60
+    - 80
+  momentum: 0.9
+  weight_decay: 0
+lp_n_epochs: 100
+
 optimizer: sgd
 optimizer_args:
-  lr: 1.e-4 # 0.001
-  momentum: 0.99
-  weight_decay: 0 # 5.e-4
+  lr: 1.e-7 # 0.001
+  momentum: 0.9
+  weight_decay: 5.e-6
+n_epochs: 10
 
 save_path: ./save/clip/mini-imagenet/stdFT
 
-
+save_epoch: 10
 V: 1
-n_epochs: 30
