--- a/configs/clip/mini-imagenet/finetune_ViT_lp.yaml
+++ b/configs/clip/mini-imagenet/finetune_ViT_lp.yaml
@@ -23,30 +23,43 @@ val_set_args:
 
 encoder: clip_ViT-B32
 
-stdFT: True
+LP: False
 
-# path: ./save/task_samples/task5000/meta-mini-imagenet_ViT-B32_fs-centroid_5y25s_1000size
-# path: ./save/clip/meta-mini-imagenet_RN50_fs-centroid_5y1s_finetune_clip
-# path: ./save/mini-imagenet/Mm_trend/meta-mini-imagenet_ViT-B32_fs-centroid_15y4s_600m_800M
-# ckpt: epoch-10.pth
-# start_epoch_from: 10
+path: ./save/clip/mini-imagenet/stdFT/meta-mini-imagenet_clip_ViT-B32_lp_logistic_15y1s_150m_200M
+ckpt: lp_epoch-5.pth
+LP_FT: True
+
 
 classifier: fs-centroid
 classifier_args:
   temp: 10.
   learn_temp: True
 
+lp_optimizer: sgd
+lp_optimizer_args:
+  lr: 1.
+  schedule: step
+  decay_rate: 0.1
+  decay_epochs:
+    - 60
+    - 80
+  momentum: 0.9
+  weight_decay: 0
+lp_n_epochs: 5
+
 optimizer: sgd
 optimizer_args:
-  lr: 0.01
+  lr: 1.e-6 # 0.001
+  schedule: step
+  decay_rate: 0.1
+  decay_epochs:
+    - 5
   momentum: 0.9
   weight_decay: 5.e-6
+n_epochs: 10
 
-########### M,m trend
+# rm_path: True
 save_path: ./save/clip/mini-imagenet/stdFT
 
-
-save_epoch: 5
+save_epoch: 1
 V: 1
-n_epochs: 30
-
