--- a/configs/clip/tiered-imagenet/finetune_RN50_lp.yaml
+++ b/configs/clip/tiered-imagenet/finetune_RN50_lp.yaml
@@ -22,30 +22,40 @@ val_set_args:
 
 
 encoder: clip_RN50
-stdFT: True
+LP: False
 
+path: ./save/clip/tiered-imagenet/stdFT/meta-tiered-imagenet_clip_RN50_lp_logistic_15y1s_150m_200M
+ckpt: lp_epoch-30.pth
+LP_FT: True
 
-# path: ./save/task_samples/task5000/meta-mini-imagenet_ViT-B32_fs-centroid_5y25s_1000size
-# path: ./save/tiered-imagenet/Mm_trend/meta-tiered-imagenet_ViT-B32_fs-centroid_15y1s_150m_600M
-# ckpt: epoch-last.pth
-# start_epoch_from: 10
 
 classifier: fs-centroid
 classifier_args:
   temp: 10.
   learn_temp: True
 
+lp_optimizer: sgd
+lp_optimizer_args:
+  lr: 1.
+  schedule: step
+  decay_rate: 0.1
+  decay_epochs:
+    - 60
+    - 80
+  momentum: 0.9
+  weight_decay: 0
+lp_n_epochs: 30
+
 optimizer: sgd
 optimizer_args:
-  lr: 1.e-4 # 0.001
-  momentum: 0.99
-  weight_decay: 0 # 5.e-4
-
-
+  lr: 1.e-7 # 0.001
+  momentum: 0.9
+  weight_decay: 5.e-6
+n_epochs: 10
 
 save_path: ./save/clip/tiered-imagenet/stdFT
 
-save_epoch: 5
+save_epoch: 10
 V: 1
-n_epochs: 10
+
 
