--- a/configs/clip/tiered-imagenet/finetune_ViT.yaml
+++ b/configs/clip/tiered-imagenet/finetune_ViT.yaml
@@ -21,7 +21,7 @@ val_set_args:
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 
 
-encoder: ViT-B32
+encoder: clip_ViT-B32
 
 # path: ./save/task_samples/task5000/meta-mini-imagenet_ViT-B32_fs-centroid_5y25s_1000size
 # path: ./save/tiered-imagenet/Mm_trend/meta-tiered-imagenet_ViT-B32_fs-centroid_15y1s_150m_600M
@@ -53,9 +53,10 @@ optimizer_args:
 # save_path: ./save/task_samples/task5000
 
 ########### M,m trend
-# save_path: ./save/tiered-imagenet/Mm_trend
+save_path: ./save/clip/tiered-imagenet/Mm_trend
 
-save_path: ./save/mini-imagenet/vary_num_shot
+# save_path: ./save/clip/tiered-imagenet/stdFT
+
 
 save_epoch: 5
 V: 1
