--- a/configs/clip/tiered-imagenet/finetune_ViT_stdFT.yaml
+++ b/configs/clip/tiered-imagenet/finetune_ViT_stdFT.yaml
@@ -1,6 +1,5 @@
-dataset: meta-domain-net
+dataset: seq-meta-tiered-imagenet
 train_set_args: 
-  root: /srv/home/zxu444/datasets/domainNet/sketch_split
   split: meta-train
   size: 224           # added for ViT
   transform: clip
@@ -11,7 +10,6 @@ train_set_args:
   n_query: 9
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 val_set_args:
-  root: /srv/home/zxu444/datasets/domainNet/sketch_split
   split: meta-val
   size: 224           # added for ViT
   transform: clip
@@ -25,38 +23,28 @@ val_set_args:
 
 encoder: clip_ViT-B32
 
-LP: False
-
-path: ./save/clip/domain-net/stdFT/meta-domain-net_clip_ViT-B32_lp_logistic_15y1s_150m_200M
-ckpt: lp_epoch-10.pth
-LP_FT: True
-
+# path: ./save/task_samples/task5000/meta-mini-imagenet_ViT-B32_fs-centroid_5y25s_1000size
+# path: ./save/tiered-imagenet/Mm_trend/meta-tiered-imagenet_ViT-B32_fs-centroid_15y1s_150m_600M
+# ckpt: epoch-last.pth
+# start_epoch_from: 10
 
 classifier: fs-centroid
 classifier_args:
   temp: 10.
   learn_temp: True
 
-lp_optimizer: sgd
-lp_optimizer_args:
-  lr: 1.
-  schedule: step
-  decay_rate: 0.1
-  decay_epochs:
-    - 60
-    - 80
-  momentum: 0.9
-  weight_decay: 0
-lp_n_epochs: 100
-
 optimizer: sgd
 optimizer_args:
   lr: 1.e-6 # 0.001
   momentum: 0.9
   weight_decay: 5.e-6
+
+
+
+save_path: ./save/clip/tiered-imagenet/stdFT
+
+
+save_epoch: 5
+V: 1
 n_epochs: 10
 
-save_path: ./save/clip/domain-net/stdFT
-
-save_epoch: 10
-V: 1
