--- a/configs/clip/tiered-imagenet/test.yaml
+++ b/configs/clip/tiered-imagenet/test.yaml
@@ -6,14 +6,15 @@ test_set_args:
   n_batch: 150
   n_episode: 1
   n_way: 15
-  n_shot: 5
+  n_shot: 1
   n_query: 15
 
 
-# encoder: ViT-B32
-encoder: RN50
-path: ./save/tiered-imagenet/Mm_trend/meta-tiered-imagenet_RN50_fs-centroid_15y1s_150m_200M
-# path: ./save/tiered-imagenet/original
+# encoder: clip_ViT-B32
+encoder: clip_RN50
+
+# path: ./save/clip/tiered-imagenet/stdFT/meta-tiered-imagenet_clip_ViT-B32_lp_logistic_15y1s_150m_200M
+path: ./save/clip/tiered-imagenet/stdFT/meta-tiered-imagenet_clip_RN50_lp_logistic_15y1s_150m_200M
 
 ckpt: max-va.pth
 # ckpt: epoch-last.pth
