--- a/configs/dinov2/mini-imagenet/test.yaml
+++ b/configs/dinov2/mini-imagenet/test.yaml
@@ -11,8 +11,8 @@ test_set_args:
 
 
 encoder: dinov2_vitb14
-path: ./save/dinov2/mini-imagenet/Mm_trend/meta-mini-imagenet_dinov2_vitb14_fs-centroid_15y1s_150m_200M
-
+# path: ./save/dinov2/mini-imagenet/Mm_trend/meta-mini-imagenet_dinov2_vitb14_fs-centroid_15y1s_150m_200M
+path: ./save/dinov2/mini-imagenet/stdFT/meta-mini-imagenet_dinov2_vitb14_lp_logistic_15y1s_150m_200M
 ckpt: max-va.pth
 # ckpt: epoch-last.pth
 
