--- a/configs/torchvision/mini-imagenet/test.yaml
+++ b/configs/torchvision/mini-imagenet/test.yaml
@@ -11,10 +11,11 @@ test_set_args:
 
 
 encoder: torchvision_vit_b_32
-path: ./save/torchvision/mini-imagenet/Mm_trend/meta-mini-imagenet_torchvision_vit_b_32_fs-centroid_15y1s_150m_200M
+# path: ./save/torchvision/mini-imagenet/Mm_trend/meta-mini-imagenet_torchvision_vit_b_32_fs-centroid_15y1s_150m_200M
+path: ./save/torchvision/mini-imagenet/stdFT/meta-mini-imagenet_torchvision_vit_b_32_lp_logistic_15y1s_150m_200M
 # encoder: torchvision_RN50
 # path: ./save/torchvision/mini-imagenet/Mm_trend/meta-mini-imagenet_torchvision_RN50_fs-centroid_15y1s_150m_200M
-
+# path: ./save/torchvision/mini-imagenet/stdFT/meta-mini-imagenet_torchvision_RN50_lp_logistic_15y1s_150m_200M
 
 ckpt: max-va.pth
 
