--- a/configs/torchvision/tiered-imagenet/finetune_RN50_lp.yaml
+++ b/configs/torchvision/tiered-imagenet/finetune_RN50_lp.yaml
@@ -23,7 +23,11 @@ val_set_args:
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 
 encoder: torchvision_RN50
-stdFT: True
+LP: False
+
+path: ./save/torchvision/tiered-imagenet/stdFT/meta-tiered-imagenet_torchvision_RN50_lp_logistic_15y1s_150m_200M
+ckpt: lp_epoch-10.pth
+LP_FT: True
 
 
 classifier: fs-centroid
@@ -31,16 +35,28 @@ classifier_args:
   temp: 10.
   learn_temp: True
 
+lp_optimizer: sgd
+lp_optimizer_args:
+  lr: 1.
+  schedule: step
+  decay_rate: 0.1
+  decay_epochs:
+    - 60
+    - 80
+  momentum: 0.9
+  weight_decay: 0
+lp_n_epochs: 30
+
 optimizer: sgd
 optimizer_args:
-  lr: 1.e-4 
-  momentum: 0.99
-  weight_decay: 0 
-
+  lr: 1.e-7 # 0.001
+  momentum: 0.9
+  weight_decay: 5.e-6
+n_epochs: 10
 
 save_path: ./save/torchvision/tiered-imagenet/stdFT
 
-save_epoch: 5
+save_epoch: 10
 V: 1
-n_epochs: 10
+
 
