--- a/configs/torchvision/tiered-imagenet/test.yaml
+++ b/configs/torchvision/tiered-imagenet/test.yaml
@@ -10,11 +10,14 @@ test_set_args:
   n_query: 15
 
 
-# encoder: torchvision_vit_b_32
+encoder: torchvision_vit_b_32
 # path: ./save/torchvision/tiered-imagenet/Mm_trend/meta-tiered-imagenet_torchvision_vit_b_32_fs-centroid_15y1s_150m_200M
+path: ./save/torchvision/tiered-imagenet/stdFT/meta-tiered-imagenet_torchvision_vit_b_32_lp_logistic_15y1s_150m_200M
 
-encoder: torchvision_RN50
-path: ./save/torchvision/tiered-imagenet/Mm_trend/meta-tiered-imagenet_torchvision_RN50_fs-centroid_15y1s_150m_200M
+# encoder: torchvision_RN50
+# path: ./save/torchvision/tiered-imagenet/Mm_trend/meta-tiered-imagenet_torchvision_RN50_fs-centroid_15y1s_150m_200M
+# path: ./save/torchvision/tiered-imagenet/stdFT/meta-tiered-imagenet_torchvision_RN50_lp_logistic_15y1s_150m_200M
+
 
 ckpt: max-va.pth
 # ckpt: epoch-last.pth
