--- a/configs/clip/domain-net/finetune_ViT.yaml
+++ b/configs/clip/domain-net/finetune_ViT.yaml
@@ -4,8 +4,8 @@ train_set_args:
   split: meta-train
   size: 224           # added for ViT
   transform: clip
-  n_batch: 200
-  n_episode: 1
+  n_batch: 100
+  n_episode: 2
   n_way: 15
   n_shot: 1
   n_query: 9
@@ -15,21 +15,23 @@ val_set_args:
   split: meta-val
   size: 224           # added for ViT
   transform: clip
-  n_batch: 200
-  n_episode: 1
+  n_batch: 20
+  n_episode: 2
   n_way: 15
   n_shot: 1
   n_query: 10
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 
 
-encoder: ViT-B32
+encoder: clip_ViT-B32
 
 # path: ./save/task_samples/task5000/meta-mini-imagenet_ViT-B32_fs-centroid_5y25s_1000size
 # path: ./save/clip/meta-mini-imagenet_RN50_fs-centroid_5y1s_finetune_clip
 # path: ./save/mini-imagenet/Mm_trend/meta-mini-imagenet_ViT-B32_fs-centroid_15y4s_600m_800M
-# ckpt: epoch-10.pth
-# start_epoch_from: 10
+
+path: ./save/clip/mini-imagenet/Mm_trend/meta-mini-imagenet_clip_ViT-B32_fs-centroid_15y2s18q_300m_100M
+ckpt: epoch-5.pth
+start_epoch_from: 5
 
 classifier: fs-centroid
 classifier_args:
@@ -44,10 +46,10 @@ optimizer_args:
 
 
 ########### M,m trend
-save_path: ./save/clip/domain-net/Mm_trend
+save_path: ./save/clip/domain-net/mixed_mini_start_from_5
 
 
-save_epoch: 5
+save_epoch: 1
 V: 1
-n_epochs: 10
+n_epochs: 5
 
