--- a/configs/clip/domain-net/test.yaml
+++ b/configs/clip/domain-net/test.yaml
@@ -5,22 +5,24 @@ test_set_args:
   size: 224                 
   transform: clip
   n_batch: 150
-  n_episode: 1
+  n_episode: 2
   n_way: 15
   n_shot: 1
   n_query: 15
 
 
-# encoder: clip_ViT-B32
-encoder: clip_RN50
+encoder: clip_ViT-B32
+# encoder: clip_RN50
 # path: ./save/clip/domain-net/Mm_trend/meta-domain-net_ViT-B32_fs-centroid_15y1s_150m_200M
 # path: ./save/clip/domain-net/Mm_trend/meta-domain-net_RN50_fs-centroid_15y1s_150m_200M
 # path: ./save/clip/domain-net/stdFT/meta-domain-net_clip_ViT-B32_lp_logistic_15y1s_150m_200M
-path: ./save/clip/domain-net/stdFT/meta-domain-net_clip_RN50_lp_logistic_15y1s_150m_200M
-
+# path: ./save/clip/domain-net/stdFT/meta-domain-net_clip_RN50_lp_logistic_15y1s_150m_200M
+# path: ./save/clip/domain-net/mixed_mini_start_from_5/meta-domain-net_clip_ViT-B32_fs-centroid_15y2s18q_300m_100M
 # path: ./save/tiered-imagenet/original
 
-ckpt: max-va.pth
+# path: ./save/clip/mini-imagenet/Mm_trend/meta-mini-imagenet_clip_ViT-B32_fs-centroid_15y2s18q_300m_100M
+# path: ./save/clip/mini-imagenet/stdFT/meta-mini-imagenet_clip_ViT-B32_lp_logistic_15y1s_150m_100M
+# ckpt: max-va.pth
 # ckpt: epoch-last.pth
 
 
