--- a/configs/clip/mini-imagenet/test.yaml
+++ b/configs/clip/mini-imagenet/test.yaml
@@ -5,9 +5,9 @@ test_set_args:
   size: 224                 # add for clip
   transform: clip
   n_batch: 150
-  n_episode: 1
+  n_episode: 2
   n_way: 15
-  n_shot: 5
+  n_shot: 1
   n_query: 15
 
 ##  test pretrain CLIP ViT-B32 freeze + append train mlp head + meta NC as classifier
@@ -59,9 +59,14 @@ test_set_args:
 # ckpt: epoch-last.pth
 
 encoder: clip_ViT-B32
+# path: ./save/clip/mini-imagenet/Mm_trend/meta-mini-imagenet_ViT-B32_fs-centroid_15y4s_600m_800M
+# path: ./save/clip/mini-imagenet/Mm_trend/meta-mini-imagenet_clip_ViT-B32_fs-centroid_15y2s18q_300m_100M
+
+# path: ./save/clip/mini-imagenet/Mm_trend/meta-mini-imagenet_clip_ViT-B32_fs-centroid_15y2s18q_300m_100M
+path: ./save/clip/domain-net/Mm_trend/meta-domain-net_ViT-B32_fs-centroid_15y1s_150m_200M
 # encoder: clip_RN50
 # path: ./save/mini-imagenet/original
-path: ./save/clip/mini-imagenet/stdFT/meta-mini-imagenet_clip_ViT-B32_lp_logistic_15y1s_150m_200M
+# path: ./save/clip/mini-imagenet/stdFT/meta-mini-imagenet_clip_ViT-B32_lp_logistic_15y1s_150m_200M
 # path: ./save/clip/mini-imagenet/stdFT/meta-mini-imagenet_clip_RN50_lp_logistic_15y1s_150m_200M
 
 
