--- a/configs/clip/tiered-imagenet/test.yaml
+++ b/configs/clip/tiered-imagenet/test.yaml
@@ -10,12 +10,13 @@ test_set_args:
   n_query: 15
 
 
-# encoder: clip_ViT-B32
-encoder: clip_RN50
+encoder: clip_ViT-B32
+# encoder: clip_RN50
 
 # path: ./save/clip/tiered-imagenet/stdFT/meta-tiered-imagenet_clip_ViT-B32_lp_logistic_15y1s_150m_200M
-path: ./save/clip/tiered-imagenet/stdFT/meta-tiered-imagenet_clip_RN50_lp_logistic_15y1s_150m_200M
+# path: ./save/clip/tiered-imagenet/stdFT/meta-tiered-imagenet_clip_RN50_lp_logistic_15y1s_150m_200M
 
+path: ./save/clip/tiered-imagenet/limited_class/meta-tiered-imagenet_clip_ViT-B32_fs-centroid_15y1s9q_150m_200Mclass10
 ckpt: max-va.pth
 # ckpt: epoch-last.pth
 
