--- a/configs/dinov2/domain-net/test.yaml
+++ b/configs/dinov2/domain-net/test.yaml
@@ -5,9 +5,9 @@ test_set_args:
   size: 224                 
   transform: make_classification_eval_transform
   n_batch: 150
-  n_episode: 1
+  n_episode: 2
   n_way: 15
-  n_shot: 5
+  n_shot: 1
   n_query: 15
 
 
@@ -15,11 +15,19 @@ test_set_args:
 
 # path: ./save/dinov2/domain-net/Mm_trend/meta-domain-net_dinov2_vitb14_fs-centroid_15y1s_150m_200M
 # path: ./save/dinov2/domain-net/stdFT/meta-domain-net_dinov2_vitb14_lp_logistic_15y1s_150m_200M
+# path: save/dinov2/mini-imagenet/Mm_trend/meta-mini-imagenet_dinov2_vitb14_fs-centroid_15y1s_150m_200M
 
-encoder: dinov2_vits14
+# path: ./save/dinov2/mini-imagenet/stdFT/meta-mini-imagenet_dinov2_vitb14_lp_logistic_15y1s_150m_200M
+
+# encoder: dinov2_vits14
 # path: ./save/dinov2/domain-net/Mm_trend/meta-domain-net_dinov2_vits14_fs-centroid_15y1s_150m_200M
-path: ./save/dinov2/domain-net/stdFT/meta-domain-net_dinov2_vits14_lp_logistic_15y1s_150m_200M
+# path: ./save/dinov2/domain-net/stdFT/meta-domain-net_dinov2_vits14_lp_logistic_15y1s_150m_200M
+# path: save/dinov2/mini-imagenet/Mm_trend/meta-mini-imagenet_dinov2_vits14_fs-centroid_15y1s_150m_200M
 
+encoder: dino_vitb16
+# path: ./save/dino/omniglot/15y1s/meta-omniglot_dino_vitb16_fs-centroid_15y1s15q_240m_200M
+
+path: ./save/dinov2/domain-net/mixed_mini_start_from_5/meta-domain-net_dinov2_vitb14_fs-centroid_15y2s18q_300m_100M
 ckpt: max-va.pth
 # ckpt: epoch-last.pth
 
