--- a/configs/dinov2/mini-imagenet/finetune.yaml
+++ b/configs/dinov2/mini-imagenet/finetune.yaml
@@ -1,5 +1,6 @@
 dataset: meta-mini-imagenet
 train_set_args: 
+  # split: meta-train
   split: meta_train_limited_class8
   size: 224           # added for ViT
   transform: dinov2
@@ -15,16 +16,17 @@ val_set_args:
   size: 224           # added for ViT
   transform: make_classification_eval_transform
   val_transform: make_classification_eval_transform
-  n_batch: 200
+  n_batch: 50
   n_episode: 1
   n_way: 15
   n_shot: 1
-  n_query: 10
+  n_query: 9
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 
 
 # encoder: dinov2_vitb14
-encoder: dinov2_vits14
+encoder: dinov2_vitb14
+# encoder: dino_vitb16
 
 # path: ./save/task_samples/task5000/meta-mini-imagenet_ViT-B32_fs-centroid_5y25s_1000size
 # path: ./save/tiered-imagenet/Mm_trend/meta-tiered-imagenet_ViT-B32_fs-centroid_15y1s_150m_600M
@@ -44,7 +46,7 @@ optimizer_args:
 
 
 ########### M,m trend
-save_path: ./save/dinov2/mini-imagenet/Mm_trend
+save_path: ./save/dinov2/mini-imagenet/limited_class
 
 
 save_epoch: 5
