--- a/configs/dinov2/mini-imagenet/test.yaml
+++ b/configs/dinov2/mini-imagenet/test.yaml
@@ -3,23 +3,29 @@ test_set_args:
   split: meta-test
   size: 224                 
   transform: make_classification_eval_transform
-  n_batch: 150
-  n_episode: 1
+  n_batch: 100
+  n_episode: 2
   n_way: 15
-  n_shot: 5
+  n_shot: 1
   n_query: 15
 
 
-# encoder: dinov2_vitb14
+encoder: dinov2_vitb14
 # path: ./save/dinov2/mini-imagenet/Mm_trend/meta-mini-imagenet_dinov2_vitb14_fs-centroid_15y1s_150m_200M
 # path: ./save/dinov2/mini-imagenet/stdFT/meta-mini-imagenet_dinov2_vitb14_lp_logistic_15y1s_150m_200M
+# path: ./save/dinov2/mini-imagenet/limited_class/meta-mini-imagenet_dinov2_vitb14_fs-centroid_15y1s9q_150m_200M
+path: ./save/dinov2/domain-net/Mm_trend/meta-domain-net_dinov2_vitb14_fs-centroid_15y1s_150m_200M
 
-encoder: dinov2_vits14
+# encoder: dinov2_vits14
 # path: ./save/dinov2/mini-imagenet/Mm_trend/meta-mini-imagenet_dinov2_vits14_fs-centroid_15y1s_150m_200M
-path: ./save/dinov2/mini-imagenet/stdFT/meta-mini-imagenet_dinov2_vits14_lp_logistic_15y1s_150m_200M
+# path: ./save/dinov2/mini-imagenet/stdFT/meta-mini-imagenet_dinov2_vits14_lp_logistic_15y1s_150m_200M
 
-ckpt: max-va.pth
-# ckpt: epoch-last.pth
+# path: ./save/dino/mini-imagenet/5y5s/meta-mini-imagenet_dino_vitb16_fs-centroid_5y5s15q_100m_200M
+# encoder: dino_vitb16
+
+# ckpt: max-va.pth
+ckpt: epoch-5.pth
+
 
 
 classifier: fs-centroid
