--- a/configs/dinov2/tiered-imagenet/test.yaml
+++ b/configs/dinov2/tiered-imagenet/test.yaml
@@ -6,17 +6,18 @@ test_set_args:
   n_batch: 150
   n_episode: 1
   n_way: 15
-  n_shot: 5
+  n_shot: 1
   n_query: 15
 
 
-# encoder: dinov2_vitb14
+encoder: dinov2_vitb14
 # path: ./save/dinov2/tiered-imagenet/Mm_trend/meta-tiered-imagenet_dinov2_vitb14_fs-centroid_15y1s_150m_200M
 # path: ./save/dinov2/tiered-imagenet/stdFT/meta-tiered-imagenet_dinov2_vitb14_lp_logistic_15y1s_150m_200M
 
-encoder: dinov2_vits14
+
+# encoder: dinov2_vits14
 # path: ./save/dinov2/tiered-imagenet/Mm_trend/meta-tiered-imagenet_dinov2_vits14_fs-centroid_15y1s_150m_200M
-path: ./save/dinov2/tiered-imagenet/stdFT/meta-tiered-imagenet_dinov2_vits14_lp_logistic_15y1s_150m_200M
+# path: ./save/dinov2/tiered-imagenet/stdFT/meta-tiered-imagenet_dinov2_vits14_lp_logistic_15y1s_150m_200M
 
 ckpt: max-va.pth
 # ckpt: epoch-last.pth
