--- a/configs/mocov3/mini-imagenet/test.yaml
+++ b/configs/mocov3/mini-imagenet/test.yaml
@@ -6,21 +6,29 @@ test_set_args:
   n_batch: 150
   n_episode: 1
   n_way: 15
-  n_shot: 1
+  n_shot: 5
   n_query: 15
 
 
 ### encoder
-encoder: mocov3_vit
+# encoder: mocov3_vit
+# encoder_args: 
+#   ## arch: vit_small
+#   ## ckpt_path: ../pretrained_model/mocov3/vit-s-300ep.pth.tar
+#   arch: vit_base
+#   ckpt_path: ../pretrained_model/mocov3/vit-b-300ep.pth.tar
+
+encoder: mocov3_RN50
 encoder_args: 
-  # arch: vit_small
-  # ckpt_path: ../pretrained_model/mocov3/vit-s-300ep.pth.tar
-  arch: vit_base
-  ckpt_path: ../pretrained_model/mocov3/vit-b-300ep.pth.tar
+  ckpt_path: ../pretrained_model/mocov3/r-50-300ep.pth.tar
 
+# ViT
 # path: ./save/mocov3/mini-imagenet/Mm_trend/meta-mini-imagenet_mocov3_vit_fs-centroid_15y1s_150m_200M
-path: ./save/mocov3/mini-imagenet/stdFT/meta-mini-imagenet_mocov3_vit_lp_logistic_15y1s_150m_200M
+# path: ./save/mocov3/mini-imagenet/stdFT/meta-mini-imagenet_mocov3_vit_lp_logistic_15y1s_150m_200M
 
+# RN50
+path: ./save/mocov3/mini-imagenet/Mm_trend/meta-mini-imagenet_mocov3_RN50_fs-centroid_15y1s_150m_200M
+# path: ./save/mocov3/mini-imagenet/stdFT/meta-mini-imagenet_mocov3_RN50_lp_logistic_15y1s_150m_200M
 
 ckpt: max-va.pth
 
