--- a/configs/mocov3/tiered-imagenet/test.yaml
+++ b/configs/mocov3/tiered-imagenet/test.yaml
@@ -18,9 +18,16 @@ encoder_args:
   arch: vit_base
   ckpt_path: ../pretrained_model/mocov3/vit-b-300ep.pth.tar
 
-# path: ./save/mocov3/tiered-imagenet/Mm_trend/meta-tiered-imagenet_mocov3_vit_fs-centroid_15y1s_150m_200M
-path: ./save/mocov3/tiered-imagenet/stdFT/meta-tiered-imagenet_mocov3_vit_lp_logistic_15y1s_150m_200M
+# encoder: mocov3_RN50
+# encoder_args: 
+#   ckpt_path: ../pretrained_model/mocov3/r-50-300ep.pth.tar
 
+# path: ./save/mocov3/tiered-imagenet/Mm_trend/meta-tiered-imagenet_mocov3_vit_fs-centroid_15y1s_150m_200M
+# path: ./save/mocov3/tiered-imagenet/stdFT/meta-tiered-imagenet_mocov3_vit_lp_logistic_15y1s_150m_200M
+
+# RN50
+# path: ./save/mocov3/tiered-imagenet/Mm_trend/meta-tiered-imagenet_mocov3_RN50_fs-centroid_15y1s_150m_200M
+# path: ./save/mocov3/tiered-imagenet/stdFT/meta-tiered-imagenet_mocov3_RN50_lp_logistic_15y1s_150m_200M
 
 ckpt: max-va.pth
 
