--- a/configs/torchvision/domain-net/test.yaml
+++ b/configs/torchvision/domain-net/test.yaml
@@ -7,20 +7,25 @@ test_set_args:
   n_batch: 150
   n_episode: 1
   n_way: 15
-  n_shot: 5
+  n_shot: 1
   n_query: 15
 
 
 encoder: torchvision_vit_b_32
 # path: ./save/torchvision/domain-net/Mm_trend/meta-domain-net_torchvision_vit_b_32_fs-centroid_15y1s_150m_200M
-path: ./save/torchvision/domain-net/stdFT/meta-domain-net_torchvision_vit_b_32_lp_logistic_15y1s_150m_200M
+# path: ./save/torchvision/domain-net/stdFT/meta-domain-net_torchvision_vit_b_32_lp_logistic_15y1s_150m_200M
+# path: save/torchvision/mini-imagenet/Mm_trend/meta-mini-imagenet_torchvision_vit_b_32_fs-centroid_15y1s_150m_200M
+path: save/torchvision/mini-imagenet/stdFT/meta-mini-imagenet_torchvision_vit_b_32_lp_logistic_15y1s_150m_200M
 
 # encoder: torchvision_RN50
 # path: ./save/torchvision/domain-net/Mm_trend/meta-domain-net_torchvision_RN50_fs-centroid_15y1s_150m_200M
 # path: ./save/torchvision/domain-net/stdFT/meta-domain-net_torchvision_RN50_lp_logistic_15y1s_150m_200M
+# path: save/torchvision/mini-imagenet/Mm_trend/meta-mini-imagenet_torchvision_RN50_fs-centroid_15y1s_150m_200M
 
-ckpt: max-va.pth
+
+# ckpt: max-va.pth
 # ckpt: epoch-last.pth
+ckpt: lp_epoch-10.pth
 
 
 classifier: fs-centroid
