update for MAML

--- a/configs/clip/mini-imagenet/finetune_ViT_maml.yaml
+++ b/configs/clip/mini-imagenet/finetune_ViT_maml.yaml
@@ -1,7 +1,7 @@
-dataset: meta-domain-net
+dataset: meta-mini-imagenet
 train_set_args: 
-  root: /srv/home/zxu444/datasets/domainNet/sketch_split
   split: meta-train
+  # split: meta_train_limited_class32
   size: 224           # added for ViT
   transform: clip
   n_batch: 100
@@ -11,11 +11,10 @@ train_set_args:
   n_query: 9
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 val_set_args:
-  root: /srv/home/zxu444/datasets/domainNet/sketch_split
   split: meta-val
   size: 224           # added for ViT
   transform: clip
-  n_batch: 20
+  n_batch: 100
   n_episode: 2
   n_way: 15
   n_shot: 1
@@ -23,10 +22,11 @@ val_set_args:
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 
 
+
 encoder: clip_ViT-B32
 
-lp_path: ../main_few_shot_image/save/clip/domain-net/stdFT/meta-domain-net_clip_ViT-B32_lp_logistic_15y1s_150m_200M
-lp_ckpt: lp_epoch-10.pth
+lp_path: ../main_few_shot_image/save/clip/mini-imagenet/stdFT/meta-mini-imagenet_clip_ViT-B32_lp_logistic_15y1s_150m_100M
+lp_ckpt: lp_epoch-5.pth
 
 classifier: fs-centroid
 classifier_args:
