--- a/configs/clip/mini-imagenet/test.yaml
+++ b/configs/clip/mini-imagenet/test.yaml
@@ -63,13 +63,13 @@ encoder: clip_ViT-B32
 # path: ./save/clip/mini-imagenet/Mm_trend/meta-mini-imagenet_clip_ViT-B32_fs-centroid_15y2s18q_300m_100M
 
 # path: ./save/clip/mini-imagenet/Mm_trend/meta-mini-imagenet_clip_ViT-B32_fs-centroid_15y2s18q_300m_100M
-path: ./save/clip/domain-net/Mm_trend/meta-domain-net_ViT-B32_fs-centroid_15y1s_150m_200M
+# path: ./save/clip/domain-net/Mm_trend/meta-domain-net_ViT-B32_fs-centroid_15y1s_150m_200M
 # encoder: clip_RN50
 # path: ./save/mini-imagenet/original
 # path: ./save/clip/mini-imagenet/stdFT/meta-mini-imagenet_clip_ViT-B32_lp_logistic_15y1s_150m_200M
 # path: ./save/clip/mini-imagenet/stdFT/meta-mini-imagenet_clip_RN50_lp_logistic_15y1s_150m_200M
 
-
+path: ./save/clip/mini-imagenet/meta-mini-imagenet_clip_ViT-B32_fs-centroid_15y2s18q_300m_100M
 ckpt: max-va.pth
 
 classifier: fs-centroid
