--- a/configs/dinov2/domain-net/finetune_maml.yaml
+++ b/configs/dinov2/domain-net/finetune_maml.yaml
@@ -2,20 +2,20 @@ dataset: meta-domain-net
 train_set_args: 
   root: /srv/home/zxu444/datasets/domainNet/sketch_split
   split: meta-train
-  size: 224           # added for ViT
-  transform: clip
+  size: 224           
+  transform: dinov2
   n_batch: 100
   n_episode: 2
   n_way: 15
   n_shot: 1
-  n_query: 9
+  n_query: 4
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 val_set_args:
   root: /srv/home/zxu444/datasets/domainNet/sketch_split
   split: meta-val
-  size: 224           # added for ViT
-  transform: clip
-  n_batch: 20
+  size: 224           
+  transform: make_classification_eval_transform
+  n_batch: 100
   n_episode: 2
   n_way: 15
   n_shot: 1
@@ -23,10 +23,13 @@ val_set_args:
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 
 
-encoder: clip_ViT-B32
+#encoder: dinov2_vits14
+#lp_path: ../main_few_shot_image/save/dinov2/domain-net/stdFT/meta-domain-net_dinov2_vits14_lp_logistic_15y1s_150m_200M
+encoder: dinov2_vitb14
+lp_path: ../main_few_shot_image/save/dinov2/domain-net/stdFT/meta-domain-net_dinov2_vitb14_lp_logistic_15y1s_150m_200M
 
-lp_path: ../main_few_shot_image/save/clip/domain-net/stdFT/meta-domain-net_clip_ViT-B32_lp_logistic_15y1s_150m_200M
 lp_ckpt: lp_epoch-10.pth
+
 
 classifier: fs-centroid
 classifier_args:
@@ -36,7 +39,7 @@ classifier_args:
 
 optimizer: sgd
 optimizer_args:
-  lr: 1.e-5 # 0.001
+  lr: 1.e-10 # 0.001
   momentum: 0.9
   weight_decay: 5.e-6
 
