--- a/configs/dinov2/mini-imagenet/finetune_maml.yaml
+++ b/configs/dinov2/mini-imagenet/finetune_maml.yaml
@@ -1,32 +1,36 @@
-dataset: meta-domain-net
+dataset: meta-mini-imagenet
 train_set_args: 
-  root: /srv/home/zxu444/datasets/domainNet/sketch_split
   split: meta-train
   size: 224           # added for ViT
-  transform: clip
+  transform: dinov2
+  val_transform: dinov2
   n_batch: 100
+  n_episode: 2
+  n_way: 15
+  n_shot: 1
+  n_query: 4
+  deterministic: True  # whether set images in dataset to be deterministic in each epoch
+val_set_args:
+  split: meta-val
+  size: 224           # added for ViT
+  transform: make_classification_eval_transform
+  val_transform: make_classification_eval_transform
+  n_batch: 5
   n_episode: 2
   n_way: 15
   n_shot: 1
   n_query: 9
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
-val_set_args:
-  root: /srv/home/zxu444/datasets/domainNet/sketch_split
-  split: meta-val
-  size: 224           # added for ViT
-  transform: clip
-  n_batch: 20
-  n_episode: 2
-  n_way: 15
-  n_shot: 1
-  n_query: 10
-  deterministic: True  # whether set images in dataset to be deterministic in each epoch
 
 
-encoder: clip_ViT-B32
+#encoder: dinov2_vits14
+#lp_path: ../main_few_shot_image/save/dinov2/mini-imagenet/stdFT/meta-mini-imagenet_dinov2_vits14_lp_logistic_15y1s_150m_200M
 
-lp_path: ../main_few_shot_image/save/clip/domain-net/stdFT/meta-domain-net_clip_ViT-B32_lp_logistic_15y1s_150m_200M
+encoder: dinov2_vitb14
+lp_path: ../main_few_shot_image/save/dinov2/mini-imagenet/stdFT/meta-mini-imagenet_dinov2_vitb14_lp_logistic_15y1s_150m_200M
+
 lp_ckpt: lp_epoch-10.pth
+
 
 classifier: fs-centroid
 classifier_args:
@@ -36,7 +40,7 @@ classifier_args:
 
 optimizer: sgd
 optimizer_args:
-  lr: 1.e-5 # 0.001
+  lr: 1.e-10 # 0.001
   momentum: 0.9
   weight_decay: 5.e-6
 
@@ -44,5 +48,4 @@ optimizer_args:
 
 save_epoch: 1
 V: 1
-n_epochs: 10
-
+n_epochs: 5
