--- a/configs/mocov3/domain-net/finetune_maml.yaml
+++ b/configs/mocov3/domain-net/finetune_maml.yaml
@@ -2,8 +2,8 @@ dataset: meta-domain-net
 train_set_args: 
   root: /srv/home/zxu444/datasets/domainNet/sketch_split
   split: meta-train
-  size: 224           # added for ViT
-  transform: clip
+  size: 224           
+  transform: mocov3
   n_batch: 100
   n_episode: 2
   n_way: 15
@@ -13,8 +13,8 @@ train_set_args:
 val_set_args:
   root: /srv/home/zxu444/datasets/domainNet/sketch_split
   split: meta-val
-  size: 224           # added for ViT
-  transform: clip
+  size: 224           
+  transform: make_classification_eval_transform
   n_batch: 20
   n_episode: 2
   n_way: 15
@@ -23,9 +23,18 @@ val_set_args:
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 
 
-encoder: clip_ViT-B32
+encoder: mocov3_vit
 
-lp_path: ../main_few_shot_image/save/clip/domain-net/stdFT/meta-domain-net_clip_ViT-B32_lp_logistic_15y1s_150m_200M
+encoder_args: 
+  # arch: vit_small
+  # ckpt_path: ../pretrained_model/mocov3/vit-s-300ep.pth.tar
+  arch: vit_base
+  ckpt_path: ../../pretrained_model/mocov3/vit-b-300ep.pth.tar
+
+
+
+lp_path: ../main_few_shot_image/save/mocov3/domain-net/stdFT/meta-domain-net_mocov3_vit_lp_logistic_15y1s_150m_200M
+
 lp_ckpt: lp_epoch-10.pth
 
 classifier: fs-centroid
@@ -36,7 +45,7 @@ classifier_args:
 
 optimizer: sgd
 optimizer_args:
-  lr: 1.e-5 # 0.001
+  lr: 1.e-6 # 0.001
   momentum: 0.9
   weight_decay: 5.e-6
 
