--- a/configs/mocov3/mini-imagenet/test.yaml
+++ b/configs/mocov3/mini-imagenet/test.yaml
@@ -3,24 +3,22 @@ test_set_args:
   split: meta-test
   size: 224                 
   transform: flip # adapt from mocov3: main_lincls: https://github.com/facebookresearch/moco-v3/blob/c349e6e24f40d3fedb22d973f92defa4cedf37a7/main_lincls.py#L288
-  n_batch: 150
-  n_episode: 1
+  n_batch: 15
+  n_episode: 2
   n_way: 15
   n_shot: 5
   n_query: 15
 
 
 ### encoder
-# encoder: mocov3_vit
-# encoder_args: 
-#   ## arch: vit_small
-#   ## ckpt_path: ../pretrained_model/mocov3/vit-s-300ep.pth.tar
-#   arch: vit_base
-#   ckpt_path: ../pretrained_model/mocov3/vit-b-300ep.pth.tar
-
-encoder: mocov3_RN50
+encoder: mocov3_vit
 encoder_args: 
-  ckpt_path: ../pretrained_model/mocov3/r-50-300ep.pth.tar
+  arch: vit_base
+  ckpt_path: ../../pretrained_model/mocov3/vit-b-300ep.pth.tar
+
+#encoder: mocov3_RN50
+#encoder_args: 
+#  ckpt_path: ../../pretrained_model/mocov3/r-50-300ep.pth.tar
 
 # ViT
 # path: ./save/mocov3/mini-imagenet/Mm_trend/meta-mini-imagenet_mocov3_vit_fs-centroid_15y1s_150m_200M
