--- a/configs/torchvision/mini-imagenet/finetune_maml.yaml
+++ b/configs/torchvision/mini-imagenet/finetune_maml.yaml
@@ -1,21 +1,21 @@
-dataset: meta-domain-net
+dataset: meta-mini-imagenet
 train_set_args: 
-  root: /srv/home/zxu444/datasets/domainNet/sketch_split
   split: meta-train
-  size: 224           # added for ViT
-  transform: clip
+  size: 224           
+  transform: dinov2
+  val_transform: dinov2
   n_batch: 100
   n_episode: 2
   n_way: 15
   n_shot: 1
-  n_query: 9
+  n_query: 4
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 val_set_args:
-  root: /srv/home/zxu444/datasets/domainNet/sketch_split
   split: meta-val
-  size: 224           # added for ViT
-  transform: clip
-  n_batch: 20
+  size: 224           
+  transform: make_classification_eval_transform
+  val_transform: make_classification_eval_transform
+  n_batch: 10
   n_episode: 2
   n_way: 15
   n_shot: 1
@@ -23,10 +23,11 @@ val_set_args:
   deterministic: True  # whether set images in dataset to be deterministic in each epoch
 
 
-encoder: clip_ViT-B32
+encoder: torchvision_vit_b_32
 
-lp_path: ../main_few_shot_image/save/clip/domain-net/stdFT/meta-domain-net_clip_ViT-B32_lp_logistic_15y1s_150m_200M
+lp_path: ../main_few_shot_image/save/torchvision/mini-imagenet/stdFT/meta-mini-imagenet_torchvision_vit_b_32_lp_logistic_15y1s_150m_200M
 lp_ckpt: lp_epoch-10.pth
+
 
 classifier: fs-centroid
 classifier_args:
@@ -36,13 +37,14 @@ classifier_args:
 
 optimizer: sgd
 optimizer_args:
-  lr: 1.e-5 # 0.001
+  lr: 1.e-6 # 0.001
   momentum: 0.9
   weight_decay: 5.e-6
-
-
-
-save_epoch: 1
-V: 1
 n_epochs: 10
+
+save_path: ./save/torchvision/mini-imagenet/stdFT
+
+save_epoch: 10
+V: 1
+
 
